// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<GoogleLoginButton /> renders 1`] = `
<div
  className="login__social-btn login__social-btn--googleplus"
>
  <SocialIcon
    className="loginIcon"
    name="google"
  />
  <a
    href="/login/google?_destination=http://localhost/"
    title={
      <FormattedMessage
        id="Google"
        values={Object {}}
      />
    }
  >
    <FormattedMessage
      id="Google"
      values={Object {}}
    />
  </a>
</div>
`;

exports[`<GoogleLoginButton /> renders a button with correct registration label 1`] = `
<div
  className="login__social-btn login__social-btn--googleplus"
>
  <SocialIcon
    className="loginIcon"
    name="google"
  />
  <a
    href="/login/google?_destination=http://localhost/"
    title={
      <FormattedMessage
        id="registration.google"
        values={Object {}}
      />
    }
  >
    <FormattedMessage
      id="registration.google"
      values={Object {}}
    />
  </a>
</div>
`;

exports[`<GoogleLoginButton /> renders without prefix 1`] = `
<div
  className="login__social-btn login__social-btn--googleplus"
>
  <SocialIcon
    className="loginIcon"
    name="google"
  />
  <a
    href="/login/google?_destination=http://localhost/"
    title={
      <FormattedMessage
        id="Google"
        values={Object {}}
      />
    }
  >
    <FormattedMessage
      id="Google"
      values={Object {}}
    />
  </a>
</div>
`;
